blog.css
:root {
    --heading-font-size: calc(0.7rem + 1vw) ;
    --sub-heading-font-size: calc(1.6rem + 1vw);
    --p-font-size: calc(0.5rem + 1vw);
--dark-font-color: rgB(16	23	40);
--light-font-color: white;
--high-opacity: 0.8;
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    
}

html {
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
    font-size: 16px;
    padding: 0;
    margin: 0;
    height: 100vh;

}

@font-face {
    font-family: moonkids;
    src: url('./assets/moonkids.ttf');
}

body {

    background-color: rgB(16	23	40);	
    color: whitesmoke;
    height: 100vh;
}

.nav-container {
    height: 100px;
    width: 100vw;
background-color: rgB(16	23	40);
font-size: calc(0.9rem + 1vw);
color: whitesmoke;
display: flex;
justify-content: space-around;
align-items: center;
column-gap: 5vw;

}
.nav-logo div {
    font-family: moonkids;
    color: white;
    
}

#dkc {
    color: rgb(249, 160, 174);
    font-size: 2rem;

}

header{
    position: fixed;
    top: 0;
z-index: 2;
}

.nav-links ul {
    display: flex;
    flex-direction: row;
    column-gap: 6vw;
}
.nav-links li:hover{
    text-decoration: underline purple;
border: 2px solid rgb(248, 158, 173);
border-radius: 10px;


}

.nav-container li,
a {
    list-style-type: none;
    text-decoration: none;
    color: antiquewhite;
    padding: 5px 7px 0 7px;
}

.logo {
    height: 29rem;
    /* background: repeat center/20% url('./assets/logo.JPG'); */
    
    color: black;
    
}

.section-1-container {
    width: 100%;
    height: 80vh;
    /* border: 10px solid yellow; */
    

}


 .bg-container {
    
    position: relative;
    height: 100%;
    width: 100;
    display: flex;
    justify-content: center;
    align-items: center ;
    flex: 0;
    
}

 .bg-puppies {
    position: absolute;
height: 100%;
width: 100%;
object-fit: cover;
object-position: center;
    background: repeat center/100% url('./assets/puppies.jpg');
    
    opacity: 0.5;
    z-index: -1;
    
    
} 

.bg-content {
    position: relative;
    color: white;
    z-index: 1;
    text-align: center;
   
}

.heading {
    font-size: calc(0.7rem + 1.5vw) ;
    
    text-transform: uppercase;
    font-weight: normal;
    font-family: monospace;
}
.sub-heading {
    font-size: calc(1.6rem + 2vw);
    font-weight: bold;

}
.sub-heading>span {
    color: black;
}
.bg-content .sub-heading+p {
color: white;
font-size: calc(0.5rem + 2vw);

} 
#blog-entries-container {
    width: 90vw;
    height: auto;
    /* border: 10px solid yellow; */
    background-color: var(--dark-font-color);
display: flex;
align-items: center;
justify-content: center;
flex-direction: column;
margin-top: 200px;
}
#blog-entries-container h2 {
    font-size: 2rem;
    color: green;
    align-self: center;
    border: 10px solid white;
}


.blog-card-container {
width: 80vw; 
height: 600px;
    /* border: 10px solid green; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    
    }
    
    .card-image-container {
        
     /* border: 5px solid white; */
height: 700px;
/* padding-bottom: 50%; */
width: 100%;
position: relative;
overflow: visible;
        }
    .card-image-container img {
        
        position: absolute;
        top: 0;
        left: 0;
    width: 100%;
    height: 100%;
object-fit: contain;
object-position: center;

        }

